--- a/css/etc_display_event.css
+++ b/css/etc_display_event.css
@@ -20,6 +20,27 @@ body {
     font-family: 'roboto', sans-serif;
   }
 
+  /*CSS for header going back*/
+.page-top-bar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 8px;
+    background: #fff;
+    border-bottom: 1px solid #dfdfdf;
+    
+}
+.page-top-bar h1{
+    font-size: 22px;
+}
+.page-top-bar a {
+    margin-right: 15px;
+}
+.page-top-bar i{
+    font-size: 25px;
+    color: black;
+}
+
 /*CSS for My custom loader*/
 .bg-transpa{
   position: -webkit-sticky; /* Safari */
@@ -429,7 +450,10 @@ body {
 .wrapper-agents{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 8px;
+  width: 100%;
 }
 
 .wrapper-agents .agent-unit{
@@ -437,6 +461,7 @@ body {
   border: 3px solid #50506d;
   padding: 4px;
   border-radius: 15px;
+  width: 100%;
 }
 
 .agent-unit .info-unit{
@@ -451,6 +476,18 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 8px;
+}
+
+.link-unit i{
+  font-size: 34px;
+}
+
+.link-unit button{
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  background-color: #3498db;
+  color: white;
 }
 
 @media (min-width: 500px){
@@ -484,6 +521,16 @@ body {
     /*min-height: 300px;*/
     width: 327px;
     background-color: #ffffff;
+  }
+
+  /*Modal content for ticket purchase*/
+  .modal-content{
+    width: 50%;
+  }
+
+  /*Event agent unit*/
+  .wrapper-agents .agent-unit{
+    width: 50%;
   }
 
 }
