At this point I will put this version as betha on github. The rest of modications are intented to be done on the server

--- a/css/etc_create_event.css
+++ b/css/etc_create_event.css
@@ -122,6 +122,18 @@ body{
     flex-direction: column;
 }
 
+.dateTime-timezone{
+    display: flex;
+    flex-direction: row;
+}
+
+.dateTime-timezone input{
+    width: 70%;
+}
+.dateTime-timezone select{
+    width: 30%;
+}
+
 .box-suggestion-input-pair{
     display: flex;
     flex-direction: column;
