--- a/css/profile.css
+++ b/css/profile.css
@@ -2,8 +2,52 @@
 
 * {
     margin: 0;
-    padding: 0
+    padding: 0;
 }
+
+/*CSS for My custom loader*/
+.bg-transpa{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    z-index: 99;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-size: 18px;
+    font-family: Verdana, sans-serif
+}
+
+.bg-transpa .loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
+  .bg-transpa .text-loading-container{
+      margin-top: 15px;
+  }
+
+ /* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+      
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/*End*/   
 
 .class-body-profile{
     display: flex;
@@ -15,15 +59,14 @@
     width: 100%;
 }
 
-.card {
-   /* height: 430px;*/
+.card-profile {
     width: 100%;
     background-color: #fff;
     overflow: hidden;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    position: relative
+    position: relative;
 }
 
 .overlay {
@@ -32,25 +75,25 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 999
+    z-index: 999;
 }
 
 .overlay .fa-close {
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #fff
+    color: #fff;
 }
 
 .overlay img {
     object-fit: cover;
     transition: all 2s;
     height: 100%;
-    width: 100%
+    width: 100%;
 }
 
 .d-none {
-    display: none
+    display: none;
 }
 
 .top-div {
@@ -58,7 +101,7 @@
     padding: 20px;
     font-size: 17px;
     color: #fff;
-    z-index: 1
+    z-index: 1;
 }
 
 .image {
@@ -67,7 +110,7 @@
     align-items: center;
     flex-direction: column;
     height: 180px;
-    width: 100%
+    width: 100%;
 }
 
 .image span {
@@ -79,14 +122,14 @@
     border-radius: 50%;
     background-color: #ccc;
     border: 3px solid #fff;
-    z-index: 100
+    z-index: 100;
 }
 
 .image span img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    object-fit: cover
+    object-fit: cover;
 }
 
 .image h3 {
@@ -94,19 +137,19 @@
     font-weight: 900;
     font-size: 18px;
     z-index: 100;
-    color: #fff
+    color: #fff;
 }
 
 .image h4 {
     margin-top: -3px;
     font-size: 13px;
     z-index: 100;
-    color: #fff
+    color: #fff;
 }
 
 .arc {
     display: flex;
-    position: relative
+    position: relative;
 }
 
 .arc span {
@@ -116,20 +159,20 @@
     border-radius: 50%;
     position: absolute;
     right: -135px;
-    top: -590px
+    top: -590px;
 }
 
 .about {
-    padding: 10px 20px
+    padding: 10px 20px;
 }
 
 .about p:nth-child(1) {
-    font-weight: 600
+    font-weight: 600;
 }
 
 .about p:nth-child(2) {
     font-size: 13px;
-    padding-right: 90px
+    padding-right: 90px;
 }
 
 .button {
@@ -151,7 +194,7 @@
     border-radius: 30px;
     border: none;
     transition: all 0.5s;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .button button:nth-child(2) {
@@ -163,7 +206,7 @@
     border: 2px solid green;
     font-size: 12px;
     background-color: #fff;
-    transition: all 0.5s
+    transition: all 0.5s;
 }
 
 .button button:nth-child(3) {
@@ -175,7 +218,7 @@
     border: 2px solid green;
     font-size: 12px;
     background-color: #fff;
-    transition: all 0.5s
+    transition: all 0.5s;
 }
 
 .button button:nth-child(4) {
@@ -187,30 +230,30 @@
     border: 2px solid green;
     font-size: 12px;
     background-color: #fff;
-    transition: all 0.5s
+    transition: all 0.5s;
 }
 
 .button button:nth-child(1):hover {
-    background-image: linear-gradient(to right, #B8550F, #626262)
+    background-image: linear-gradient(to right, #B8550F, #626262);
 }
 
 .button button:nth-child(2):hover {
     background-color: #ccc;
     color: #000;
-    font-weight: 700
+    font-weight: 700;
 }
 
 .button button:nth-child(3):hover {
     background-color: #ccc;
     color: #000;
-    font-weight: 700
+    font-weight: 700;
 }
 
 .profile-info {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    align-items: center
+    align-items: center;
 }
 
 .profile-info .user-stat {
@@ -650,6 +693,48 @@
 }
 
 /**/
+/*CSS for fadein notification text*/
+.copy-notification {
+    color: #ffffff;
+    background-color: rgba(0,0,0,0.8);
+    padding: 20px;
+    border-radius: 30px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    margin-top: -30px;
+    margin-left: -85px;
+    display: none;
+    text-align:center;
+}
+
+  /*Small code for CSS copy link popup*/
+  #id-content-popup3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
+  }
+
+  #event-link-val{
+    padding: 8px;
+    border: none;
+    border-bottom: 1px solid black;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  #id-content-popup3 button{
+    padding: 12px;
+      background-color: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 15px;
+  }
+
+
 /*CSS POPUP FOR profile config*/
 .custom-model-main {
     text-align: center;
@@ -762,9 +847,9 @@
 }
 
 .pair-label-input input, .pair-label-input textarea{
-    border-radius: 5px;
+    border: none;
+    border-bottom: 2px solid black;
     padding: 4px;
-    border:1px solid black;
 }
 
 .box-update-prof-pic , .box-btn-action-config-prof{
@@ -848,11 +933,13 @@
 }
 
 .inner-wrapper-wallet .wallet-event-unit{
+    width: 90%;
+    background-color: white;
     border-radius: 5px;
     padding: 8px;
     display: flex;
     flex-direction: column;
-    border: 2px solid white;
+    border: 3px solid #292b2c;
     margin-top: 15px;
 }
 
@@ -894,7 +981,7 @@
 }
 
 .title-block .number{
-    background-color: white;
+    background-color: #f7f7f7;
     border-radius: 15px;
     padding: 4px 12px 4px 12px;
 }
@@ -1023,6 +1110,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .app-navigation-container-icon {
@@ -1086,6 +1175,11 @@
 
     .configuration-modal .configuration-modal-content{
         width: 50%;
+    }
+
+    /*Arc under the profile image*/
+    .arc span{
+        width: 900px;
     }
 }
 @media screen and (max-width:799px){
