Some work has been done create_event and diplay_event_one.

--- a/css/etc_create_event.css
+++ b/css/etc_create_event.css
@@ -38,6 +38,9 @@ body{
   }
 
   .bg-transpa .text-loading-container{
+      display: flex;
+      text-align: center;
+      padding: 8px;
       margin-top: 15px;
   }
   
