Trying to add the first logo of zimaccess and correcting bug in create event page

--- a/css/etc_home.css
+++ b/css/etc_home.css
@@ -24,6 +24,10 @@ body{
 .logo-n-version{
     display: flex;
     flex-direction: row;
+
+}
+.logo-n-version img{
+    width: 54px;
 }
 
 .logo-n-version .zimaccess-logo{
